--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-  <types>
-    <name>ApexClass</name>
-    <members>A12</members>
-    <members>A13</members>
-  </types>
-  <version>43.0</version>
-  <fullName>force-app</fullName>
+    <version>41.0</version>
+    <types>
+        <members>A12</members>
+        <members>A13</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Account</members>
+        <members>AccountCleanInfo</members>
+        <name>CustomObject</name>
+    </types>
 </Package>
